kubernetes/apps/default/jellyfin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin-reverse-proxy
  namespace: default
  labels:
    app: jellyfin-reverse-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin-reverse-proxy
  template:
    metadata:
      labels:
        app: jellyfin-reverse-proxy
        category: reverse-proxy
    spec:
      containers:
        - name: jellyfin-reverse-proxy
          image: owasp/modsecurity-crs:4-nginx-202512071012
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: modsec-override
              mountPath: /etc/modsecurity.d/owasp-crs/rules/REQUEST-900-EXCLUSION-RULES-BEFORE-CRS.conf
              subPath: modsecurity-override.conf
              readOnly: true
      volumes:
        - name: modsec-override
          configMap:
            name: jellyfin-modsec-override
            items:
              - key: modsecurity-override.conf
                path: modsecurity-override.conf
