kubernetes/apps/default/jellyfin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-reverse-proxy
  namespace: default
spec:
  ports:
    - name: http
      targetPort: 8080
      port: 80
  selector:
    app: jellyfin-reverse-proxy
    category: reverse-proxy
